resources/cpu-demo-high.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-demo-high
  namespace: resources-demo
spec:
  containers:
  - name: cpu-demo-ctr-2
    image: vish/stress
    resources:
      limits:
        cpu: "100"
      requests:
        cpu: "100"
    args:
    - -cpus
    - "2"
