resources/memory-demo-high.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-demo-high
  namespace: resources-demo
spec:
  containers:
  - name: memory-demo-2-ctr
    image: polinux/stress
    resources:
      requests:
        memory: "50Mi"
      limits:
        memory: "100Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
