resources/pod-configmap-command.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap-command
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/echo", "$(SPECIAL_LEVEL_KEY) $(SPECIAL_TYPE_KEY)" ]
  restartPolicy: Never
