resources/pod-configmap-env-from.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap-env-from
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "env" ]
  restartPolicy: Never
