resources/pod-configmap-mount-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap-mount-file
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh","-c","ls -l /etc/config/filetest; echo; echo \"# Contenido\"; cat /etc/config/filetest" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: special-config-multi
        items:
        - key: SPECIAL_LEVEL # Key del configmap
          path: filetest # fichero de destino
  restartPolicy: Never
