resources/pod-probes.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    command: ['sh', '-c']
    args:
      - |
        touch /tmp/healthy; sleep 20
        touch /tmp/ready; sleep 20
        rm -rf /tmp/healthy
        sleep 300
    livenessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 1
      successThreshold: 1
    readinessProbe:
      exec:
        command:
        - cat
        - /tmp/ready
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 1
      successThreshold: 1
