resources/redis-pod-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-pod-affinity
spec:
  selector:
    matchLabels:
      app: redis-cache
  replicas: 2
  template:
    metadata:
      labels:
        app: redis-cache # LABEL DEL POD
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - redis-cache
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: redis-server
        image: redis:3.2-alpine
