resources/statefulset-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless # tiene que hacer match con el statefulset 'serviceName'
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None # Mana
  selector:
    app: stateful-demo # apunta a pods
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: stateful-demo # tiene que coincidir con .spec.template.metadata.labels
  serviceName: "nginx-headless" # Tiene que hacer match con el headless service name
  replicas: 2 # por defecto es 1
  template:
    metadata:
      labels:
        app: stateful-demo # tiene que coincidir con .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
