resources/svc-web-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-lb
spec:
  type: LoadBalancer
  selector:
    app: stateful-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
