resources/ingress-01-singleService.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-default-backend
  #annotations:
    #kubernetes.io/ingress.class: nginx # Ya no necesaria en 1.26
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
