resources/ingress-02-simpleFanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-simple-fanout-example
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /apple(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: apple-service
            port:
              number: 5678
      - path: /banana(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: banana-service
            port:
              number: 5678
      - path: /nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
