resources/ingress-04-nameBasedVS-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-name-based-vs-and-default
  #annotations:
    # kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.34.78.182.208.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
  - host: apple.34.78.182.208.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apple-service
            port:
              number: 5678
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: banana-service
            port:
              number: 5678
