resources/ingress-05-SSL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ssl
  annotations:
    # kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - nginx.130.211.102.3.nip.io
    secretName: nginx-ingress-ssl-cert # < cert-manager will store the created certificate in this secret.
  rules:
  - host: nginx.130.211.102.3.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
